--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "client": "sanity start --prefix database",
+    "dev": "concurrently \"npm start\" \"npm run client\""
   },
   "eslintConfig": {
     "extends": [
@@ -37,6 +39,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
+    "concurrently": "^6.2.0",
     "postcss": "^8.3.6",
     "tailwindcss": "^2.2.7"
   }
