--- a/client/database/package.json
+++ b/client/database/package.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "@sanity/base": "^2.13.1",
+    "@sanity/code-input": "^2.13.1",
     "@sanity/components": "^2.13.0",
     "@sanity/core": "^2.13.1",
     "@sanity/default-layout": "^2.13.1",
@@ -23,7 +24,11 @@
     "@sanity/vision": "^2.13.1",
     "prop-types": "^15.7",
     "react": "^17.0",
-    "react-dom": "^17.0"
+    "react-dom": "^17.0",
+    "sanity-plugin-autocomplete-tags": "^1.0.1",
+    "sanity-plugin-color-list": "^2.0.2",
+    "sanity-plugin-content-calendar": "^1.1.2",
+    "sanity-plugin-icon-picker": "^2.0.1"
   },
   "devDependencies": {}
 }
