--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@iconscout/react-unicons": "^1.1.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -17,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "client": "sanity start --prefix database",
+    "client": "sanity start $prefix database",
     "dev": "concurrently \"npm start\" \"npm run client\""
   },
   "eslintConfig": {
@@ -39,9 +41,7 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.3.1",
     "concurrently": "^6.2.0",
-    "postcss": "^8.3.6",
     "tailwindcss": "^2.2.7"
   }
 }
