--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-preloaders": "^3.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-tabs": "^3.2.2",
     "reactjs-popup": "^2.0.5",
+    "swiper": "^6.8.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
