--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "4.0.3",
     "react-tabs": "^3.2.2",
     "reactjs-popup": "^2.0.5",
+    "styled-components": "^5.3.0",
     "swiper": "^6.8.0",
     "web-vitals": "^1.1.2"
   },
