--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,13 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-preloaders": "^3.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-tabs": "^3.2.2",
     "reactjs-popup": "^2.0.5",
-    "styled-components": "^5.3.0",
     "swiper": "^6.8.0",
     "web-vitals": "^1.1.2"
   },
@@ -25,6 +24,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "client": "sanity start $prefix database",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "concurrently \"npm start\" \"npm run client\""
   },
   "eslintConfig": {
@@ -47,7 +48,6 @@
   },
   "devDependencies": {
     "concurrently": "^6.2.0",
-    "node-sass": "^6.0.1",
-    "tailwindcss": "^2.2.7"
+    "node-sass": "^6.0.1"
   }
 }
